add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <main>
                 <!--Sidebar Section-->
                 <div class = "sidebar">
-                    <img class = sidebar-img" src = https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4Hkvq69piJcw--duOuEya1nEqF0qk0xCVmicRI3aJ-usfC0v6LJ__U4ND_2_7v80E1Mo:https://i.pinimg.com/564x/74/d7/b0/74d7b05c3476e062ca7c26452ffb22cb.jpg&usqp=CAU
+                    <img class = "sidebar-img" src = https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4Hkvq69piJcw--duOuEya1nEqF0qk0xCVmicRI3aJ-usfC0v6LJ__U4ND_2_7v80E1Mo:https://i.pinimg.com/564x/74/d7/b0/74d7b05c3476e062ca7c26452ffb22cb.jpg&usqp=CAU
                 </div>
 
                 <!--Content Section-->
@@ -32,12 +32,12 @@
                     <h2>Kaitlyn Zhang</h2>
                     <p>Student at Hanville High School</p>
                     <!--Interest Section-->
-                    <div id = interest>
+                    <div id = "interest">
                         <h3>Interests</h3>
                         <ul>
-                            <li>Art</li>
-                            <li>Reading </li>
-                            <li>Dogs</li>
+                            <li> Art</li>
+                            <li> Reading </li>
+                            <li> Dogs </li>
                         </ul>
                     </div>
                 </div>
