--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-         <title> Kaitlyn's Website </title>
-         <link rel="stylesheet" href="style.css">
-    </head>
 
-    <body>
-        <!---Visable HTML element go here-->
-        <div id = "all contents">
-            <nav>
-                <h1>My Interest</h1>
-                <ul id="nav-ul">
-                    <li class="nav-li">
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li class="nav-li">
-                        <a href="portfolio.html">Portfolio</a>
-                    </li>
+<head>
+    <title> Kaitlyn's Website </title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-                </ul>
-            </nav>
-            
-            <main>
-                <!--Sidebar Section-->
-                <div class = "sidebar">
-                    <img class = "sidebar-img" src = https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4Hkvq69piJcw--duOuEya1nEqF0qk0xCVmicRI3aJ-usfC0v6LJ__U4ND_2_7v80E1Mo:https://i.pinimg.com/564x/74/d7/b0/74d7b05c3476e062ca7c26452ffb22cb.jpg&usqp=CAU
+<body>
+    <!---Visable HTML element go here-->
+    <div id="all-contents">
+        <nav>
+            <h1>My Website</h1>
+            <ul id="nav-ul">
+                <li class="nav-li">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="nav-li">
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
+
+            </ul>
+        </nav>
+
+        <main>
+            <!--Sidebar Section-->
+            <div class="sidebar">
+                <img class="sidebar-img"
+                    src="images/Benjamin.png">
+            </div>
+
+
+
+            <!--Content Section-->
+            <div class="content">
+                <h2>Kaitlyn Zhang</h2>
+                <p>Student at Hanville High School</p>
+                <!--Interest Section-->
+                <div id="interest">
+                    <h3>Interests</h3>
+                    <ul>
+                        <li> Art</li>
+                        <li> Reading </li>
+                        <li> Dogs </li>
+                    </ul>
                 </div>
+            </div>
+        </main>
 
-                <!--Content Section-->
-                <div class="content">
-                    <h2>Kaitlyn Zhang</h2>
-                    <p>Student at Hanville High School</p>
-                    <!--Interest Section-->
-                    <div id = "interest">
-                        <h3>Interests</h3>
-                        <ul>
-                            <li> Art</li>
-                            <li> Reading </li>
-                            <li> Dogs </li>
-                        </ul>
-                    </div>
-                </div>
-            </main>
+    </div>
+</body>
 
-        </div>
-    </body>
 </html>
