--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,11 @@
         <nav>
             <h1> Kaitlyn's Website </h1>
             <ul id = "nav-ul">
-                <li class = "nav-li">
-                <a class = "nav-a" href= "index.html">Home</a>
-            </li>
-            <li class = "nav-li">
-                <a class = "nav-a" href= "portfolio.html"></a>
+                 <li class = "nav-li">
+                 <a class = "nav-a" href= "index.html">Home</a>
+             </li>
+             <li class = "nav-li">
+                <a class = "nav-a" href= "portfolio.html">Portfolio</a>
             </li>
           </ul> 
         </nav>
