<message about commit>

--- a/projects/platformer/index.html
+++ b/projects/platformer/index.html
@@ -12,9 +12,9 @@
 
   <body id="body">
     <canvas id="canvas" width="1400" height="750"></canvas>
-    <img id="cannon" src="images/cannon.png" />
+    <img id="cannon" src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmO3BuEVarMJwlfmVBzP8Fa3p_8Bh-48h73E2bXQGpMbdo6xe6Nz4Waoco8_d6DhnGgHw:https://cdn.imgbin.com/9/23/13/imgbin-fireworks-stick-pattern-material-vDeM4MpWRZTuVxh4yzjEvkjQ0.jpg&usqp=CAU"/>
     <img id="player" src="images/halle.png" />
-    <img id="projectile" src="images/projectile.png" />
+    <img id="projectile" src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIbyYsEfQydJp72Bp_vBVRnEDBxM-uwfinb3kjqO0mk1wc9fdUQ8ldhlbrn-zbKPwJrNQ:https://p1.hiclipart.com/preview/58/769/289/light-burst-png-clipart.jpg&usqp=CAU"/>
     <img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Test.svg" />
   </body>
 </html>
