--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -58,8 +58,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
+				box.css('top', newPositionY);
 				var colorStr = "rgb(50, 25, 250)";
 				
 			}
@@ -78,6 +79,10 @@
 			var points = 0
 			var speed = 4
 			var randNum = Math.random() * boardWidth;
+			var positionY = 0
+			var speedY = 4
+			var boardHeight = board.height(); 
+			var randNumY = Math.random() * boardHeight
 
 
 			
@@ -89,13 +94,21 @@
 			function update() {
 				/* Your Code to Increase positionX by 10 HERE */
 				positionX = positionX + speed
+				positionY = positionY + speedY
 
-				moveBoxTo(positionX);
+				moveBoxTo(positionX, positionY);
 				if (positionX > boardWidth) {
 					speed = -speed;
 				}
 				if (positionX < 0) {
 					speed = -speed;
+				}
+				if (positionY > boardHeight) {
+					speedY = -speedY
+				}
+				if (positionY < 0 ) {
+					speedY = -speedY
+
 				}
 
 			};
@@ -112,6 +125,7 @@
 			*/
 			function handleBoxClick() {
 				positionX = randNum;
+				positionY = randNumY;
 				points = points + 1
 				changeBoxText(points);
 			
